--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fastify": "4.25.2",
     "i": "0.3.7",
     "lodash": "4.17.21",
+    "mongoose": "^8.6.3",
     "node-cache": "5.1.2",
     "npm": "10.2.5",
     "snarkjs": "^0.7.4",
