--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "license": "MIT",
   "dependencies": {
     "@commitlint/config-conventional": "^18.4.4",
-    "@fastify/cors": "^9.0.1",
+    "@fastify/cookie": "^10.0.1",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/session": "^11.0.1",
     "axios": "1.6.3",
     "axios-retry": "^4.0.0",
     "commitlint": "^18.6.0",
     "dotenv": "16.3.1",
-    "fastify": "4.25.2",
+    "fastify": "^5.0.0",
     "i": "0.3.7",
     "lodash": "4.17.21",
     "node-cache": "5.1.2",
     "npm": "10.2.5",
     "snarkjs": "^0.7.4",
+    "twitter-api-v2": "^1.17.2",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
