--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "types/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
