--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios-retry": "^4.0.0",
     "commitlint": "^18.6.0",
     "dotenv": "16.3.1",
+    "ethers": "^6.13.3",
     "fastify": "^5.0.0",
     "i": "0.3.7",
     "lodash": "4.17.21",
