--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Matschik <mathieu.schimmerling@protonmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.29.1",
     "@commitlint/config-conventional": "^18.4.4",
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.1",
