--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.1",
     "@fastify/session": "^11.0.1",
+    "@telegram-auth/server": "^1.0.4",
     "axios": "1.6.3",
     "axios-retry": "^4.0.0",
     "commitlint": "^18.6.0",
