--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-cache": "5.1.2",
     "npm": "10.2.5",
     "snarkjs": "^0.7.4",
+    "twilio": "^5.3.3",
     "twitter-api-v2": "^1.17.2",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
